datascientest/Kubernetes FastApi Project/YAML-STANDARD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: fastapi.flochai.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi
              port:
                number: 80
